--- a/02-pokemon-static/package.json
+++ b/02-pokemon-static/package.json
@@ -10,11 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.2",
+    "@astrojs/check": "^0.7.0",
+    "@astrojs/solid-js": "^4.3.0",
     "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.13.2",
+    "astro": "^4.10.2",
     "astro-icon": "^1.1.0",
-    "tailwindcss": "^3.4.9",
-    "typescript": "^5.5.4"
+    "solid-js": "^1.8.17",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.4.5"
   }
 }
